--- a/conf/.tmux.conf
+++ b/conf/.tmux.conf
@@ -12,9 +12,9 @@ set -g history-limit 20000
 set -g renumber-windows on
 
 # unbind default prefix and set it to Ctrl+a
-unbind C-b
-set -g prefix C-l
-bind C-l send-prefix
+#unbind C-b
+#set -g prefix C-a
+#bind C-a send-prefix
 
 # for nested tmux sessions
 #bind-key a send-prefix
@@ -56,7 +56,7 @@ set-option -g set-titles-string "#T - #W"
 bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 
 # split window and fix path for tmux 1.9
-bind \ split-window -h -c "#{pane_current_path}"
+bind \\ split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
 # synchronize all panes in a window
